--- a/.github/workflows/Hello_world.yml
+++ b/.github/workflows/Hello_world.yml
@@ -16,7 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  hello-world:
+  hello-world-ubuntu:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -34,3 +34,13 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+  hello-world-windows:
+    name: Hello world Windows
+    runs-on: windows-latest
+
+  hello-world-macos:
+    name: Hello World MacOS
+    runs-on: macos-latest
+    needs:
+      - hello-world-ubuntu
+      - hello-world-windows
