--- a/.github/workflows/Hello_world.yml
+++ b/.github/workflows/Hello_world.yml
@@ -6,7 +6,9 @@ name: Hello World
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master ]
+    branches:
+     - master
+     - develop
   pull_request:
     branches: [ master ]
 
@@ -27,20 +29,27 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: echo Hello, world - Ubuntu!
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+          
   hello-world-windows:
-    name: Hello world Windows
+    name: Hello World Windows
     runs-on: windows-latest
+    steps:
+      - name: Print Hello World Windows
+      - run: echo Hello, World - Windows
 
   hello-world-macos:
     name: Hello World MacOS
     runs-on: macos-latest
+    steps:
+      - name: Print Hello World MacOS
+      - run: echo Hello, World - MacOS
     needs:
       - hello-world-ubuntu
       - hello-world-windows
