--- a/.github/workflows/Hello_world.yml
+++ b/.github/workflows/Hello_world.yml
@@ -50,6 +50,4 @@ jobs:
     steps:
       - name: Print Hello World MacOS
       - run: echo Hello, World - MacOS
-    needs:
-      - hello-world-ubuntu
-      - hello-world-windows
+    needs: [hello-world-ubuntu, hello-world-windows]
